[Improve] jvm opt improvement